switching incompatible code

--- a/protobuf/Makefile
+++ b/protobuf/Makefile
@@ -1,7 +1,7 @@
 SRC=pb.c
 
 TARGET=pb.so
-CFLAGS=`pkg-config --cflags /usr/local/openresty/luajit/lib/pkgconfig/luajit.pc`
+CFLAGS=`pkg-config --cflags /usr/local/openresty/luajit/lib/pkgconfig/luajit.pc`  -std=gnu99
 LDFLAGS=`pkg-config --libs /usr/local/openresty/luajit/lib/pkgconfig/luajit.pc`
 
 all:$(TARGET)
